css/src/_agency-default.scss
.single-agency {
	&.full-width-content .content-sidebar-wrap .content,
	&.full-width-content .sidebar-content-wrap .content {
		padding: 0;
	}

	.content-sidebar-wrap .content {
		margin-top: 0;
	}

	.site-inner > .wrap {
		max-width: 100%;
	}

	.site-inner {
		padding: 0;
	}

	h2,
	h3 {
		text-transform: uppercase;
		text-align: center;
	}

	h2 {
		@include underline-accent;
		font-size: 2.25rem;
		padding: 0 0 2rem;
		margin: 0;
	}

	.flow-block {
		text-align: center;
		padding: 2.5rem 0;

		@include breakpoint(medium) {
			padding: rem-calc(75 0);
		}
	}

	.flow-arrow {
		@include arrow;
	}
}

